Removed SubNavbar, fixed increased readability of About page.
The only issue now is when the user is redirected to /404, the page needs to be reloaded so that the toggle button's position is changed if dark mode is on.

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,42 +1,42 @@
-.AboutNavbar {
+.Navbar {
     border-bottom: 1px solid black;
     background-image: linear-gradient(to bottom right, #6CAFCC, #7EADC2);
     padding: 0% 10%;
     height: 60px;
 }
 
-.AboutNavbar .grid-container {
+.Navbar .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 20% 20% 20% 20% 20%;
     list-style-type: none;
     margin: 0;
     padding: 0;
     height: 100%;
 }
-.AboutNavbar .grid-container li {
+.Navbar .grid-container li {
     font-size: 30px;
     height: fit-content;
     margin: auto auto;
 }
-.AboutNavbar .grid-container li a {
+.Navbar .grid-container li a {
     text-decoration: none;
 }
-.AboutNavbar .grid-container li a:link {
+.Navbar .grid-container li a:link {
     color: #5D808F;
 }
-.AboutNavbar .grid-container li a:visited {
+.Navbar .grid-container li a:visited {
     color: #173542;
 }
-.AboutNavbar .grid-container li a:hover {
+.Navbar .grid-container li a:hover {
     color: white;
     transition-duration: 0.2s;
 }
-.AboutNavbar .grid-container button {
+.Navbar .grid-container button {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.AboutNavbar .grid-container li:hover {
+.Navbar .grid-container li:hover {
     transform: scale(1.2, 1.2);
     transition-duration: 0.3s;
 }
@@ -68,4 +68,21 @@
     -webkit-transform: translate3d(100%, 0, 0);
        -moz-transform: translate3d(100%, 0, 0);
             transform: translate3d(100%, 0, 0);
+}
+
+
+@media only screen and (max-width: 600px) {
+    .Navbar .grid-container li {
+        font-size: 25px;
+    }
+}
+@media only screen and (max-width: 500px) {
+    .Navbar {
+        padding: 0% 1%;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .Navbar .grid-container li {
+        font-size: 20px;
+    }
 }
